k8s/deployments/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
      - name: vaultwarden
        image: vaultwarden/server:latest
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
        resources:
          requests:
            cpu: 250m
            memory: 250M
          limits:
            cpu: 500m
            memory: 500M
        volumeMounts:
        - name: vaultwarden-data-volume
          mountPath: /data/
      volumes:
      - name: vaultwarden-data-volume
        persistentVolumeClaim:
          claimName: vaultwarden-vol
