k8s/deployments/vaultwarden/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  selector:
    app: vaultwarden
  type: ClusterIP
  ports:
    - name: vaultwarden
      protocol: TCP
      port: 80
      targetPort: http
