k8s/deployments/vaultwarden/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  labels:
    app: nginx
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: nginx
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: access.super001.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx
                port:
                  number: 80
